feat: Arreglando nuevamente el gitignore e ingreso de controlador libro